--- a/src/Components/Homepage-Component-Styles/imageDiv.css
+++ b/src/Components/Homepage-Component-Styles/imageDiv.css
@@ -25,3 +25,13 @@ button {
   width: 50%;
   padding: 5px 0px;
 }
+
+@media only screen and (max-width: 600px) {
+  .imageDiv {
+    padding: 0px 30px;
+  }
+  .shopNowDiv {
+    width: 250px;
+    bottom: 20vh;
+  }
+}
