--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -42,11 +42,11 @@ body {
 
 .nav {
   width: 100%;
+  margin-top: 30px;
   background-color: white;
   position: fixed;
   z-index: 200;
   padding: 0px 20px;
-  margin-top: 30px;
   height: auto;
   display: flex;
   justify-content: space-between;
@@ -63,9 +63,9 @@ body {
   font-size: 22px;
   color: #009a87 !important;
   background-image: url(https://cdn.shopify.com/s/files/1/0068/9206/0724/t/14/assets/logo.svg?v=2);
-  width: 150px;
+  width: 124px;
   background-size: cover;
-  height: 60px;
+  height: 50px;
   margin-bottom: 10px;
 }
 
@@ -77,10 +77,11 @@ body {
   display: inline;
   font-size: 18px;
   width: 40%;
-  margin-top: 10px;
+  margin-top: 13px;
 }
 .cart {
   display: inline;
+  z-index: 201;
   font-size: 18px;
   margin-top: 10px;
 }
@@ -107,7 +108,26 @@ body {
   display: none;
 }
 
+.shopSubNav {
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  margin-top: 62px;
+  margin-left: -20px;
+}
+.shopSubNav > div > a {
+  display: inline-block;
+  padding: 13px 20px;
+  font-size: 14px;
+  text-decoration: none;
+  color: #009a87 !important;
+}
 @media (max-width: 1170px) {
+  .shopSubNav {
+    margin-left: 0px;
+  }
   .nav > .nav-btn {
     display: inline-block;
     position: absolute;
@@ -120,6 +140,7 @@ body {
   .cart {
     position: absolute;
     right: 10px;
+    margin-left: 20px;
   }
   .nav {
     justify-content: center;
@@ -152,6 +173,7 @@ body {
     left: 0px;
     z-index: 200;
     padding-left: 30px;
+    text-align: left;
   }
   .nav > .nav-links > a {
     display: block;
