--- a/src/Component-Styles/cart.css
+++ b/src/Component-Styles/cart.css
@@ -7,9 +7,7 @@
   justify-content: center;
   padding: 0px 200px;
 }
-.cartedItemDiv {
-  margin-top: 40px;
-}
+
 .cartedItemImage {
   max-width: 250px;
 }
@@ -24,7 +22,13 @@
   color: #0387789e;
 }
 .cartedItemDiv {
+  margin-top: 40px;
   display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.price {
+  width: auto;
 }
 .total {
   display: flex;
@@ -39,7 +43,7 @@ button {
 }
 hr {
   width: 100%;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .checkOutButtonWrapper {
@@ -47,4 +51,45 @@ hr {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.removeAllWrapper {
+  margin-bottom: 0px !important;
+  width: 200px;
+  align-self: center;
+}
+.removeAll {
+  background-color: rgb(115, 115, 115);
+}
+
+@media (max-width: 1000px) {
+  .cartDiv {
+    padding: 0px 100px;
+  }
+}
+@media (max-width: 700px) {
+  h2 {
+    font-size: 35px;
+  }
+  .cartDiv {
+    padding: 0px 5px;
+  }
+}
+@media (max-width: 550px) {
+  h2 {
+    font-size: 30px;
+  }
+  .cartedItemDiv {
+    flex-direction: column;
+  }
+  img {
+    padding: 20px;
+    max-width: 100% !important;
+    align-self: center;
+  }
+  .price {
+    margin-left: 20px;
+  }
+  h2 {
+    margin-left: 20px;
+  }
 }
