--- a/src/Component-Styles/Homepage-Component-Styles/bestSellers.css
+++ b/src/Component-Styles/Homepage-Component-Styles/bestSellers.css
@@ -4,6 +4,7 @@
   padding: 0px 100px;
   flex-direction: column;
   margin-top: 100px;
+  padding-bottom: 50px;
 }
 .productList {
   display: flex;
